adding licitacao ai csv filter